# final_hw

./: .gitignore  buildvue.sh  install_pro.sh  package-lock.json  prometheus_install.sh  shutdonw.sh  shutdown.sh  start.sh  start_all_module.sh  start_web_module.sh  temp.sh  train.sh
backend/: CMakeLists.txt  Dockerfile  README.md  config.json  config.json.in
backend/include/: AuthFilter.h  CommentCtrl.h  PostController.h  UserCtrl.h
backend/sql/: schema.sql
backend/src/: AuthFilter.cc  PostController.cpp  main.cpp
backend/src/controllers/: CommentCtrl.cc  UserCtrl.cc
blog_website/: README.md  index.html  package-lock.json  package.json
blog_website/src/: App.vue
blog_website/src/components/: AuthPanel.vue  CommentsSection.vue  MarkdownViewer.vue  MetricsDashboard.vue  VideoPlayer.vue
blog_website/src/posts/: index.js  inline_and_static.md  myhomework.md  vscode_mcp_tutorial.md  wsl_tutorial.md
configs/: Integrajob.yaml  blog.yaml  inference.yaml  init.sql  monitor.yaml  mysql.yaml  nginx-hpa.yaml  nginx.yaml  pv_pvc.yaml  redis.yaml  train-daemon.yaml  train.yaml  trian.yaml  values.yaml
daemon/: Dockerfile  train_daemon.py
inference/: infer.py  initenv.sh  requirements.txt
train/: argintegration.py  initenv.sh  requirements.txt  train.py
